# sandbox_phm

./: CLAUDE.md  DesignSpec-Vis.md  DesignSpec.md  README.md  compare_log.py  example.py  example_visualize.py  motor_0_20260429T020906_0.h5  motor_1_20260429T020907_1.h5  motor_1_20260429T020917_2.h5  motor_1_20260429T020927_3.h5  motor_1_20260429T020937_4.h5  motor_1_20260429T020947_5.h5  phm_data.py  phm_data_example.py  phm_data_preproc.py  phm_data_vis_fft.py  pyproject.toml  sandbox.py
Old/: arrangement.md  fftsample.py  implement.md  implement2.md  main.py  phm.py  phm_data.py  phm_data_preproc.md  phm_data_preproc.py  phm_data_preproc_vis.py  phm_data_preproc_vis2.py  phm_data_preproc_vis_corr.py  phm_data_preproc_visualization.py  phm_data_vis_time.py  sandbox.py  task_result.md
motorsig/: __init__.py  __main__.py  base.py  cli.py  fastadc.py  fft.py  lognorm.py  visualize.py  xcorr.py
motorsig/tests/: test_fastadc.py  test_fft.py  test_lognorm.py  test_visualize.py  test_xcorr.py
