[project]
name = "sandbox-phm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pathlib>=1.0.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["motorsig/tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# E/W(pycodestyle), F(pyflakes), I(임포트 정렬), N(네이밍), UP(업그레이드).
select = ["E", "W", "F", "I", "N", "UP"]
